<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Elevate</string>
    <string name="title_activity_splash_screen1">SplashScreen1</string>
    <string name="dashboard">Dashboard</string>
    <string name="progress">Progress</string>
    <string name="active_habits">Active Habits</string>
    <string name="daily_motivation">Daily Motivation</string>
    <string name="your_goals">Your Goals</string>
    <string name="make_streak">Make Streak</string>
    <string name="habit">Habit</string>
    <string name="exercise">Exercise</string>
    <string name="reading">Reading</string>
    <string name="journaling">Journaling</string>
    <string name="prayer">Prayer</string>
    <string name="drinking_water">Drinking Water</string>
    <string name="sleeping_schedule">Sleeping Schedule</string>
    <string name="add_new_habit">Add New Habit</string>
    <string name="habit_details">Habit Details</string>
    <string name="focus">Focus</string>
    <string name="energy">Energy</string>
    <string name="stars">Stars</string>
    <string name="streak">Streak</string>
    <string name="completed_missions">Completed Missions</string>
    <string name="collected_stars">Collected Stars</string>
    <string name="mission">Mission</string>
    <string name="collect">Collect</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_completed_mission">You completed the mission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings">Settings</string>
    <string name="choose_gender">Choose gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="next_button">Next</string>
    <string name="back">Back</string>
    <string name="ambassador_badge">Ambassador Badge</string>
    <string name="habit_added_successfully">Habit added successfully</string>
    <string name="habit_deleted_successfully">Habit deleted successfully</string>
    <string name="habit_updated_successfully">Habit updated successfully</string>
    <string name="mission_completed">Mission completed</string>
    <string name="mission_failed">Mission failed</string>
    <string name="try_again">Try again</string>
    <string name="good_morning">Good morning</string>
    <string name="good_evening">Good evening</string>
    <string name="good_night">Good night</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_set">Reminder set</string>
    <string name="reminder_time">Reminder time</string>
    <string name="choose_time">Choose time</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="remove_reminder">Remove Reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="habit_name">Habit Name</string>
    <string name="habit_description">Habit Description</string>
    <string name="habit_time">Habit Time</string>
    <string name="habit_duration">Habit Duration</string>
    <string name="habit_goal">Habit Goal</string>
    <string name="habit_progress">Habit Progress</string>
    <string name="habit_streak">Habit Streak</string>
    <string name="habit_notes">Habit Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="no_habits">No habits yet</string>
    <string name="no_missions">No missions yet</string>
    <string name="no_notes">No notes yet</string>
    <string name="no_reminders">No reminders yet</string>
    <string name="add_first_habit">Add your first habit!</string>
    <string name="add_first_mission">Add your first mission!</string>
    <string name="add_first_note">Add your first note!</string>
    <string name="add_first_reminder">Add your first reminder!</string>
    <string name="habit_times_per_day">%1$d times a day</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="days_of_week">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="yes_no_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="language">language</string>
    <string name="arabic">arabic</string>
    <string name="english">english</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="default_web_client_id">328585894397-lbq07nlbnhht04sd3ogv81lasmc3tufo.apps.googleusercontent.com</string>
    <string name="facebook_app_id" tools:ignore="DuplicateDefinition">123456789012345</string>
    <string name="facebook_client_token" tools:ignore="DuplicateDefinition">your_facebook_client_token</string>
    <string name="fb_login_protocol_scheme">fb123456789012345</string>
    <string name="hi_user">Hi %1$s,</string>
    <string name="lets_be_productive_today">Lets be productive Today!</string>
    <string name="make_30_days_streak">Make&#10;30 days&#10;streak!</string>
    <string name="my_habits">My Habits</string>
    <string name="add_habit">+ Add Habit</string>
    <string name="times_completed">%1$d/%2$d times completed</string>
    <string name="profile_title">Profile</string>
    <string name="profile_ambassador">Ambassador</string>
    <string name="profile_total_stars">Total Stars</string>
    <string name="profile_streaks">Streaks</string>
    <string name="profile_habits">Habits</string>
    <string name="profile_notifications">Notifications</string>
    <string name="profile_logout">Logout</string>
    <string name="achievements_title">Achievements</string>
    <string name="achievements_month">Month</string>
    <string name="achievements_collect_stars">Collect the stars and lets see how productive you are!</string>
    <string name="achievements_my_stars">My Stars</string>
    <string name="achievements_productivity_high">Productivity is high</string>
    <string name="achievements_productivity_moderate">Productivity is moderate</string>
    <string name="achievements_productivity_low">Productivity is low</string>
    <string name="achievements_motivation_high">Youre on fire! Keep up the amazing work!</string>
    <string name="achievements_motivation_moderate">Great progress! Push for even more!</string>
    <string name="achievements_motivation_low">You still have time, keep your spirit up!</string>
    <string name="achievements_missions">Missions</string>
    <string name="achievements_get_stars">Get %1$s</string>
    <string name="achievements_collect">Collect</string>
    <string name="achievements_completed">Completed</string>
    <string name="achievements_completed_missions">Completed Missions</string>
    <string name="achievements_collected">Collected ✔</string>
    <string name="new_habit_title">New Habit</string>
    <string name="new_habit_subtitle">Lets plan your new habit!</string>
    <string name="habit_name_label">Whats the name of the habit? *</string>
    <string name="habit_name_hint">e.g. Drink Water</string>
    <string name="habit_name_error">Please enter a habit name</string>
    <string name="times_per_day_label">How many times a day *</string>
    <string name="times_per_day_hint">e.g. 3</string>
    <string name="times_per_day_error">Please enter how many times per day</string>
    <string name="start_time_label">Which time of the day will you be ready to start? *</string>
    <string name="start_time_hint">e.g. 9:00 AM</string>
    <string name="start_time_error">Please select a start time</string>
    <string name="end_time_label">Which time of the day will you be off this habit?</string>
    <string name="end_time_hint">e.g. 10:00 PM</string>
    <string name="preferred_time_label">Is there a preferred time you plan to practice?</string>
    <string name="preferred_time_hint">e.g. Evening</string>
    <string name="continued">Continue</string>
    <string name="mission_complete_5_habits">Complete 5 habits</string>
    <string name="mission_complete_10_habits">Complete 10 habits</string>
    <string name="mission_complete_20_habits">Complete 20 habits</string>
    <string name="mission_maintain_3_day_streak">Maintain a 3-day streak</string>
    <string name="mission_maintain_5_day_streak">Maintain a 5-day streak</string>
    <string name="mission_maintain_7_day_streak">Maintain a 7-day streak</string>
    <string name="mission_maintain_10_day_streak">Maintain a 10-day streak</string>
    <string name="mission_maintain_14_day_streak">Maintain a 14-day streak</string>
    <string name="mission_maintain_21_day_streak">Maintain a 21-day streak</string>
    <string name="mission_maintain_30_day_streak">Maintain a 30-day streak</string>
    <string name="mission_maintain_60_day_streak">Maintain a 60-day streak</string>
    <string name="mission_maintain_90_day_streak">Maintain a 90-day streak</string>
    <string name="mission_maintain_6_month_streak">Maintain a 6-month streak</string>
    <string name="mission_maintain_1_year_streak">Maintain a 1-year streak</string>
    <string name="mission_start_new_streak">Start a new streak after breaking one</string>
    <string name="mission_double_best_streak">Double your previous best streak</string>
    <string name="mission_collect_10_stars">Collect 10 stars</string>
    <string name="mission_collect_25_stars">Collect 25 stars</string>
    <string name="mission_collect_50_stars">Collect 50 stars</string>
    <string name="mission_collect_75_stars">Collect 75 stars</string>
    <string name="mission_collect_100_stars">Collect 100 stars</string>
    <string name="mission_collect_150_stars">Collect 150 stars</string>
    <string name="mission_collect_200_stars">Collect 200 stars</string>
    <string name="mission_collect_300_stars">Collect 300 stars</string>
    <string name="mission_collect_400_stars">Collect 400 stars</string>
    <string name="mission_collect_500_stars">Collect 500 stars</string>
    <string name="mission_drink_water_week">Drink 2L of water daily for a week</string>
    <string name="mission_read_20min_10days">Read for 20 minutes daily for 10 days</string>
    <string name="mission_journal_14_days">Journal every day for 14 days</string>
    <string name="mission_sleep_before_11pm_10days">Go to bed before 11pm for 10 days</string>
    <string name="mission_exercise_3x_week_month">Exercise 3 times a week for a month</string>
    <string name="mission_pray_week">Pray every day for a week</string>
    <string name="mission_wake_before_7am_5days">Wake up before 7am for 5 days</string>
    <string name="mission_meditate_10min_10days">Meditate for 10 minutes daily for 10 days</string>
    <string name="mission_no_social_media_3days">No social media for 3 days</string>
</resources>